Fix overflow on figure element

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -296,6 +296,7 @@ header {
             margin: auto;
             display: flex;
             justify-content: center;
+            overflow: hidden;
         }
 
         & > * {
